--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Socket.IO Boilerplate</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>IO</h1>
+  <div class="container">
+    <h1>Socket.IO Boilerplate <small id="socket-status"></small></h1>
 
-  <button onclick="btnClick()">Click Me</button>
+    <div class="text-center lead">
+      Join code: <div id="roomCode"></div>
+    </div>
+  </div>
+  
 
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io();
+    var room = null;
+
     socket.on('connect', function(){
       console.log('Connected');
+
+      $('#socket-status').html('<span class="label label-success">Connected</span>');
     });
 
     socket.on('disconnect', function(){
       console.log('Disconnected');
+
+      $('#socket-status').html('<span class="label label-danger">Disconnected</span>');
     });
 
-    var btnClick = function(){
-      socket.emit('something', 'Button clicked');
-    };
+    socket.on('joined_room', function(room_id){
+      room = room_id;
+      console.log('Joined Room: ' + room);
+
+      $('#roomCode').text(room.split('_')[1]);
+    });
+
+    socket.on('client_conneted', function(){
+      console.log('Client is connected');
+    });
+
+    socket.on('do', function(data){
+      alert('Do: ' + data);
+    });
+
+    
   </script>
 </body>
 </html>
